--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ log = "0.4"
 serde_json = "1.0"
 futures = "0.3"
 bcrypt = "0.13"
+regex = "1.5"
+once_cell = "1.5"
+thiserror = "1.0"
+jsonwebtoken = "8.0"
+chrono = "0.4"
